--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -7,12 +7,12 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitUseStrict": true,
-    "noUnusedLocals": true,
     "outDir": "./out",
     "sourceMap": false,
     "strictNullChecks": true,
     "inlineSourceMap": false,
     "inlineSources": false,
+    "downlevelIteration": true,
     "target": "es5"
   },
   "include": ["./*.ts"]
